<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="Dense_v1_LayerWeights" Id="{77fc58c1-a8e9-4fb8-a069-12fcbee81760}">
    <Declaration><![CDATA[
TYPE Dense_v1_LayerWeights:
STRUCT
    normalization_mean : ARRAY[0..0] OF LREAL;
    normalization_std : ARRAY[0..0] OF LREAL;
    HiddenLayers1_weight : ARRAY[0..99,0..4] OF LREAL;
    HiddenLayers1_bias : ARRAY[0..99] OF LREAL;
    HiddenLayers2_weight : ARRAY[0..99,0..99] OF LREAL;
    HiddenLayers2_bias : ARRAY[0..99] OF LREAL;
    HiddenLayers3_weight : ARRAY[0..99,0..99] OF LREAL;
    HiddenLayers3_bias : ARRAY[0..99] OF LREAL;
    OutputLayer_weight : ARRAY[0..0,0..99] OF LREAL;
    OutputLayer_bias : ARRAY[0..0] OF LREAL;
    denormalization_mean : ARRAY[0..0] OF LREAL;
    denormalization_std : ARRAY[0..0] OF LREAL;
    hash_sha_256 : ARRAY[0..3] OF LREAL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>
